# halo2-circuit-examples

./: Cargo.toml
src/: lib.rs  main.rs
src/circuits/: is_equal.rs  is_equal_1.rs  mod.rs  range_check_1.rs  range_check_2.rs  simple.rs  simple_1.rs
src/circuits/gadgets/: is_zero.rs  is_zero_1.rs  mod.rs
src/errors/: is_equal.rs  is_equal_1.rs  mod.rs
